Catch make_unique and WrapUnique applied to GC objects in the Blink GC plugin.

Implemented using Clang AST matchers for concise code.

Bug: 777751
Change-Id: I37b5d14205314c5ada88e45f06b997006bdfda85