tools/clang/blink_gc_plugin/BadPatternFinder.h
@@ -1,0 +1,14 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2017 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+class DiagnosticsReporter;
+
+namespace clang {
+class ASTContext;
+}  // namespace clang
+
+// Detects and reports use of banned patterns, such as applying
+// std::make_unique to a garbage-collected type.
+void FindBadPatterns(clang::ASTContext& ast_context, DiagnosticsReporter&);
