tools/clang/blink_gc_plugin/DiagnosticsReporter.h
@@ -79,6 +79,11 @@ class DiagnosticsReporter {
   void NoteField(clang::FieldDecl* field, unsigned note);
   void NoteOverriddenNonVirtualTrace(clang::CXXMethodDecl* overridden);
 
+  // Used by FindBadPatterns.
+  void UniquePtrUsedWithGC(const clang::Expr* expr,
+                           const clang::FunctionDecl* bad_function,
+                           const clang::CXXRecordDecl* gc_type);
+
  private:
   clang::DiagnosticBuilder ReportDiagnostic(
       clang::SourceLocation location,
@@ -139,6 +144,8 @@ class DiagnosticsReporter {
   unsigned diag_manual_dispatch_method_note_;
   unsigned diag_iterator_to_gc_managed_collection_note_;
   unsigned diag_trace_method_of_stack_allocated_parent_;
+
+  unsigned diag_unique_ptr_used_with_gc_;
 };
 
 #endif // TOOLS_BLINK_GC_PLUGIN_DIAGNOSTICS_REPORTER_H_
